@@ -2,24 +2,26 @@
 {% load i18n %}
 
 {% block extrahead %}{{block.super}}
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCX84dfVLIv0IO2UlmQz3PenHT33DJdN6I&sensor=false"></script>
 <script type="text/javascript">
-  function initialize() {
-    var latlng = new google.maps.LatLng(56.1385570, 10.9673220);
-    var myOptions = {
-      zoom: 7,
-      center: latlng,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    };
-    var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
 
-    {% for location in locations %}
-    new google.maps.Marker({
-      position: new google.maps.LatLng({{location.lat}}, {{location.lng}}),
-      map: map,
-      title:"{{location.user.first_name}} {{location.user.last_name}}"
-    });
-    {% endfor %}
+  function initialize() {
+      var myLatlng = new google.maps.LatLng(56.1385570, 10.9673220);
+      var mapOptions = {
+          zoom: 7,
+          center: myLatlng,
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+      };
+
+      var map = new google.maps.Map(document.getElementById('map_canvas'), mapOptions);
+
+      {% for location in locations %}
+      new google.maps.Marker({
+          position: new google.maps.LatLng({{location.lat|stringformat:"f"}}, {{location.lng|stringformat:"f"}}),
+          map: map,
+          title: "{{location.user.first_name}} {{location.user.last_name}}"
+      });
+      {% endfor %}
   }
 
   $(document).ready(function() {
